--- a/localisation/TD_unit_names_l_english.yml
+++ b/localisation/TD_unit_names_l_english.yml
@@ -220,6 +220,47 @@
  #Hestani (Ottoman)
 
  #Nomadic
+ mongol_bow: "Eastern Archers"
+ mongol_bowDESCR: "Light infantry troops commonly utilized in the first stage of a battle. Their purpose was to shower the opposing troops with arrows, thereby lowering their morale before the main force attacked."
+
+ mongol_swarm: "Eastern Swarm Cavalry"
+ mongol_swarmDESCR: "Cavalry archers specializing in swarm attacks, where the goal was to overwhelm their enemies by attacking en masse."
+
+ mongol_steppe: "Eastern Steppe Cavalry"
+ mongol_steppeDESCR: "Mounted archers equipped with composite bows distinguished by their high speed and power."
+
+ steppe_raiders: "Steppe Raiders"
+ steppe_raidersDESCR: "While they would make an early entry firearms where slow to make a big difference on the steppes due to the mobile nature of warfare. Cavalry would continue to be the dominant arm for the steppe armies throughout the early modern era before firearms would be made lighter and more accurate. Knives and swords would long remain the weapon of choice in close combat for Steppe Infantry."
+
+ steppe_riders: "Steppe Riders"
+ steppe_ridersDESCR: "On the vast expanses of the steppe the cavalry arm would remain dominant far longer than in other regions. As this was primarily due to the extreme mobility possible in that terrain mounted troops would continue to be rather lightly armed even after the introduction of gunpowder weapons. Before the introduction of lighter fire arms bows, swords and light lances remained the weapon of choice for steppe cavalry from Zakarturia to Weixiao."
+
+ steppe_footmen: "Steppe Footmen"
+ steppe_footmenDESCR: "The mobile nature of steppe warfare always meant that infantry would be at a disadvantage to cavalry in terms of mobility and in the great open landscapes this meant that many sedentary infantry tactics would be far less viable in the plains. In order to counter this steppe infantry would frequently form wagon forts in battle, which allowed them a protected mobility on the battlefield. Protected by the wagon forts infantry could make use of fire arms and bows while still remaining safe from cavalry attacks."
+
+ steppe_lancers: "Steppe Lancers"
+ steppe_lancersDESCR: "Traditional steppe tactics with mounted archers and lancers continued to dominate the battlefields with raids into settled lands providing both more modern arms and the knowledge to make us of them."
+
+ steppe_musketeers: "Steppe Musketeers"
+ steppe_musketeersDESCR: "To be effective on the Steppes infantry continued to create mobile forts on the battlefields from which lighter muskets and cannon could be brought to bear on the enemy without the risk of cavalry shocks from the lighter steppe cavalry breaking their formations. Lightly armed soldiers would also raid deeper into enemy lands using boats along the great rivers of the plains."
+
+ steppe_mounted_raiders: "Mounted Steppe Raiders"
+ steppe_mounted_raidersDESCR: "As time progressed both the development of firearms and the tactics to make use of them improved. While they would not out-compete the traditional arms of the steppe Horsemen, firearms would soon be an integrated part of steppe mounted warfare. As cannons got lighter and smaller some could also be brought on horseback to be put to use in the ever changing frontiers of the plains."
+
+ steppe_infantry: "Steppe Infantry"
+ steppe_infantryDESCR: "With cannons and fire arms getting lighter and more accurate the Steppe wagon forts could be used more offensively. The entire fort would move in unison to defensive positions from which they could unleash a hail of musket and cannon fire. As the battle developed cavalry was then be unleashed from within the fort on the fleeing enemy. The cannons used where of small of calibre that they could be brought on horseback with the host as it moved over the Steppes."
+
+ steppe_cavalry: "Steppe Cavalry"
+ steppe_cavalryDESCR: "Steppe cavalry would continue to excel at raiding, skirmishing and reconnaissance and many sedentary countries on the border of the Steppes would come to employ freemen, Amagari and other Steppe horsemen for these purposes. The free customs of the Steppes would in many ways remain in such units but to a certain degree their existence contributed to a change in organization and a move towards a more modern army structure."
+
+ steppe_rifles: "Steppe Rifles"
+ steppe_riflesDESCR: "While the basics of steppe warfare did not change the general evolution of warfare would in time lead to a number of developments to the armies of the hosts. As sedentary powers pushed back the borders of the free steppes, fortifying formerly nomadic areas and creating their own regiments of freemen, Amagari, and the like the steppe countries themselves would often come to be dominated by and adapt the better weapons and more organized ideas of their neighbors."
+
+ steppe_uhlans: "Steppe Uhlans"
+ steppe_uhlansDESCR: "In time steppe armies would come to rely less on looting and pilaging to cover their operating costs and more on receiving pay from a centralized command. Their tactics still relied on mobility and light arms such as pistols and lances and in open terrain they could still be quite deadly for an unprepared sedentary force but instead of dominating the battlefield on their own they would now often act as a complement to other kind of troops such as hussars or even infantry."
+
+ reformed_steppe_rifles: "Reformed Steppe Rifles"
+ reformed_steppe_riflesDESCR: "By the end of the 18th century steppe armies had in many ways gone through similar transitions as militaries to the west. While warfare would remain more mobile than in sedentary regions equipment and organization evolved to be more like standing armies. Mobility and the reliance on old tactics such as raiding and surprise attacks using boats would, however, continue to be employed regularly into the 19th century."
 
  #Samadian (Indian)
 
@@ -379,11 +420,8 @@
  merchantman: "Merchantman"
  aztec_gunpowder_warfare: "American Hill Musketeers"
  aztec_hill_warfare: "Reformed American Hill Warriors"
- aztec_tribal_warfare: "American Hill Warriors"
- mongol_bow: "Eastern Archers"
+ aztec_tribal_warfare: "American Hill warriors."
  mongolian_bow: "Archer Cavalry"
- mongol_steppe: "Eastern Steppe Cavalry"
- mongol_swarm: "Eastern Swarm Cavalry"
  native_clubmen: "Clubmen"
  native_indian_mountain_warfare: "Native American Mountain Warriors"
  native_indian_tribal_warfare: "American Plains Warriors"
@@ -513,32 +551,7 @@
  maya_tribal_warfareDESCR: "The forests and jungles of Central America was the home to the Mayan civilization. The terrain was not as open as further north giving more advantages to the defender. Here military units evolved that were suitable on both the attack and defense, although specializing in neither."
  merchantmanDESCR: "A large cargo vessel used for transportation of merchandise."
  mexican_guerilla_warfareDESCR: "The Central American Guerrilla specializes in attacks to wear down enemy morale. Although inflicting more casualties than the South American Guerrilla they are also slightly easier to wear down."
- mongol_bowDESCR: "Light infantry troops commonly utilized in the first stage of a battle. Their purpose was to shower the opposing troops with arrows, thereby lowering their morale before the main force attacked."
  mongolian_bowDESCR: "Cavalry units specialized in ambush techniques. They would lie in wait for their enemies, attacking them by surprise and thereafter quickly retreat before the enemy had time to regroup."
- mongol_steppeDESCR: "Mounted archers equipped with composite bows distinguished by their high speed and power."
- mongol_swarmDESCR: "Cavalry archers specializing in swarm attacks, where the goal was to overwhelm their enemies by attacking en masse."
- steppe_riders: "Steppe Riders"
- steppe_ridersDESCR: "On the vast expanses of the steppe the cavalry arm would remain dominant far longer than in other regions. As this was primarily due to the extreme mobility possible in that terrain mounted troops would continue to be rather lightly armed even after the introduction of gunpowder weapons. Before the introduction of lighter fire arms bows, swords and light lances remained the weapon of choice for steppe cavalry from Crimea to Manchuria."
- steppe_lancers: "Steppe Lancers"
- steppe_lancersDESCR: "Traditional steppe tactics with mounted archers and lancers continued to dominate the battlefields with raids into settled lands providing both more modern arms and the knowledge to make us of them."
- steppe_mounted_raiders: "Mounted Steppe Raiders"
- steppe_mounted_raidersDESCR: "As time progressed both the development of firearms and the tactics to make use of them improved. While they would not out-compete the traditional arms of the steppe Horsemen, firearms would soon be an integrated part of steppe mounted warfare. As cannons got lighter and smaller some could also be brought on horseback to be put to use in the ever changing frontiers of the plains."
- steppe_cavalry: "Steppe Cavalry"
- steppe_cavalryDESCR: "Steppe cavalry would continue to excel at raiding, skirmishing and reconnaissance and many sedentary countries on the border of the Steppes would come to employ Cossacks, Tartars and other Steppe horsemen for these purposes. The free customs of the Steppes would in many ways remain in such units but to a certain degree their existence contributed to a change in organization and a move towards a more modern army structure."
- steppe_uhlans: "Steppe Uhlans"
- steppe_uhlansDESCR: "In time steppe armies would come to rely less on looting and pilaging to cover their operating costs and more on receiving pay from a centralized command. Their tactics still relied on mobility and light arms such as pistols and lances and in open terrain they could still be quite deadly for an unprepared sedentary force but instead of dominating the battlefield on their own they would now often act as a complement to other kind of troops such as hussars or even infantry."
- steppe_raiders: "Steppe Raiders"
- steppe_raidersDESCR: "While they would make an early entry firearms where slow to make a big difference on the steppes due to the mobile nature of warfare. Cavalry would continue to be the dominant arm for the steppe armies throughout the early modern era before firearms would be made lighter and more accurate. Knives and swords would long remain the weapon of choice in close combat for Steppe Infantry."
- steppe_footmen: "Steppe Footmen"
- steppe_footmenDESCR: "The mobile nature of steppe warfare always meant that infantry would be at a disadvantage to cavalry in terms of mobility and in the great open landscapes this meant that many sedentary infantry tactics would be far less viable in the plains. In order to counter this steppe infantry would frequently form wagon forts in battle, which allowed them a protected mobility on the battlefield. Protected by the wagon forts infantry could make use of fire arms and bows while still remaining safe from cavalry attacks."
- steppe_musketeers: "Steppe Musketeers"
- steppe_musketeersDESCR: "To be effective on the Steppes infantry continued to create mobile forts on the battlefields from which lighter muskets and cannon could be brought to bear on the enemy without the risk of cavalry shocks from the lighter steppe cavalry breaking their formations. Lightly armed soldiers would also raid deeper into enemy lands using boats along the great rivers of the plains."
- steppe_infantry: "Steppe Infantry"
- steppe_infantryDESCR: "With cannons and fire arms getting lighter and more accurate the Steppe wagon forts could be used more offensively. The entire fort would move in unison to defensive positions from which they could unleash a hail of musket and cannon fire. As the battle developed cavalry was then be unleashed from within the fort on the fleeing enemy. The cannons used where of small of calibre that they could be brought on horseback with the host as it moved over the Steppes."
- steppe_rifles: "Steppe Rifles"
- steppe_riflesDESCR: "While the basics of steppe warfare did not change the general evolution of warfare would in time lead to a number of developments to the armies of the hosts. As sedentary powers pushed back the borders of the free Steppes, fortifying formerly nomadic areas and creating their own regiments of Cossacks, Tartars, and the like the Steppe countries themselves would often come to be dominated by and adapt the better weapons and more organized ideas of their neighbors."
- reformed_steppe_rifles: "Reformed Steppe Rifles"
- reformed_steppe_riflesDESCR: "By the end of the 18th century steppe armies had in many ways gone through similar transitions as militaries to the west. While warfare would remain more mobile than in sedentary regions equipment and organization evolved to be more like standing armies. Mobility and the reliance on old tactics such as raiding and surprise attacks using boats would, however, continue to be employed regularly into the 19th century."
  native_indian_archerDESCR: "The hunter-gatherer peoples early learned to value a man with a good aim with his bow. In peace time, it could be the difference between starvation or survival - in war, defeat or victory."
  native_indian_mountain_warfareDESCR: "Some of the toughest warriors of the Native Americans were the mountain people. Often pushed into the mountains by stronger enemies, they had to be tough to survive."
  native_clubmenDESCR: "The Native Clubman is the origin of all warriors - take something hard, hit your opponent."
