--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -144,3 +144,6 @@
 
  dorchean_realm: "Dorchean Realm"
  dorchean_realm_desc: "The King of the state is elected by the reigning clan members within the family, securing power for the founders of the kingdom."
+ 
+ moon_kingdom_reform: "Moon Kingdom"
+ moon_kingdom_reform_desc: "Moon Kingdom is a rather unique type of Bkuslcuhtian Matriarchy, which is named due to the fact that its founder was born on full moon, and its tradition is heavily centered around the lunar calendar."
