--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -15,30 +15,31 @@
  emperor_call_for_reform_emperor: "Call for Reform"
  emperor_call_for_reform_desc: "The Empire is in desperate need of reformation.\n---"
 
- emperor_reinforce_imperial_borders_title: "Reinforce Borders of The Empire" 
- emperor_reinforce_imperial_borders: "Reinforced Borders of The Empire"
- emperor_reinforce_imperial_borders_emperor_per_prince: "Reinforced Borders of The Empire"
- emperor_reinforce_imperial_borders_desc: "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\n---"
+ emperor_reinforce_imperial_borders_title: "Reinforce Borders of the Empire" 
+ emperor_reinforce_imperial_borders: "Reinforced Borders of the Empire"
+ emperor_reinforce_imperial_borders_emperor: "Reinforced Borders of the Empire"
+ emperor_reinforce_imperial_borders_emperor_per_prince: "Reinforced Borders of the Empire"
+ emperor_reinforce_imperial_borders_desc: "The first step to securing stability of the Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\n---"
  demand_additional_levies_title: "Demand Additional Levies"
  demand_additional_levies_desc: "The Empire is in dire need of manpower to protect the its subject. Our loyal princes will be demanded to offer us additional troops."
  saelian.2.t: "Emperor demands an additional levy"
- saelian.2.d: "Emperor of The Saelian Empire has just sent a request to every prince in the Empire. [Monarch.GetSheHeCap] demands to send him additional levy to \"protect the Empire\". How shall we respond?"
+ saelian.2.d: "Emperor of the Saelian Empire has just sent a request to every prince in the Empire. [Monarch.GetSheHeCap] demands to send him additional levy to \"protect the Empire\". How shall we respond?"
  saelian.2.a: "We must obey his laws."
  saelian.2.b: "That is beyond our contract."
  fund_fort_construction_title: "Fund Castle Construction"
- fund_fort_construction_tooltip: "Fund construction of modern fortification to protect Prince's realm and The Empire against the outside threats"
+ fund_fort_construction_tooltip: "Fund construction of modern fortification to protect prince's realm and the Empire against the outside threats"
  fund_fort_construction_province_tooltip: "Has Capital or a province bordering non-imperial province without any fortification building"
  fund_fort_construction_desc: "A modern fortification will be built in 1 eligible province, funded by the emperor. This will cost us 75% of the original cost of the building. This will improve [From.GetAdjective] opinion about us by §G20§!. We will gain §G1§! Imperial Authority"
 
- emperor_unify_imperial_infrastructure_title: "Unify The Infrastructure"
+ emperor_unify_imperial_infrastructure_title: "Unify the Infrastructure"
  emperor_unify_imperial_infrastructure: "Unified Infrastructure"
- emperor_unify_imperial_infrastructure_desc: "Bringing The Empire closer economically will surely help its political situation.\n---\nUnlocks \"§PExpand Via Caroli§!\" decision\nUnlocks \"§PExpand Via Magreini§!\" decision\n---"
+ emperor_unify_imperial_infrastructure_desc: "Bringing the Empire closer economically will surely help its political situation.\n---\nUnlocks \"§PExpand Via Caroli§!\" decision\nUnlocks \"§PExpand Via Magreini§!\" decision\n---"
  emperor_unify_imperial_infrastructure_province: "Unified Infrastructure" 
  expand_via_caroli_title: "Expand Via Caroli"
- expand_via_caroli_desc: "Built by Emperor Carol III, is the second longest road in The Empire. It stretches from city of Merkast in the west, through Orenburg, Rotzwasch, Hegenstadt, Pratzau, Rogau, to city of Dorschau in the east."
+ expand_via_caroli_desc: "Built by Emperor Carol III, is the second longest road in the Empire. It stretches from city of Merkast in the west, through Orenburg, Rotzwasch, Hegenstadt, Pratzau, Rogau, to city of Dorschau in the east."
  via_caroli_tooltip: "§YEvery highlighted province will get:§!\n Local Development cost:§G -5.0%§!\n Local Trade Power:§G +20.0%§!\n Friendly Movement Speed:§G +15.0%§!"
  expand_via_magreini_title: "Expand Via Magreini"
- expand_via_magreini_desc: "It's the longest road in entirety of the Saelian Empire. Going along river Magreina it stretches from duchy of Bohemia in the south, through Limstadt, Hegenstadt, Blatzmag, Magstadt, Eisbachstadt to the northern border of The Empire."
+ expand_via_magreini_desc: "It's the longest road in entirety of the Saelian Empire. Going along river Magreina it stretches from duchy of Bohemia in the south, through Limstadt, Hegenstadt, Blatzmag, Magstadt, Eisbachstadt to the northern border of the Empire."
  via_magreini_tooltip: "§YEvery highlighted province will get:§!\n Local Development cost:§G -5.0%§!\n Local Trade Power:§G +20.0%§!\n Friendly Movement Speed:§G +15.0%§!"
 
  
@@ -797,7 +798,7 @@
  imperial_mercantilism_reform: "Imperial Mercantitlism"
  imperial_mercantilism_reform_desc: "Thanks to the variety of lands in the empire, Saelia can easily produce most things on her own and export the luxuries to our more impoverished neighbours."
  assistant_legates_reform: "Assistant Legates"
- assistant_legates_reform_desc: "In order to smoothen the administration in our internal lands, we will assign legates to our provinces, which will oversee the land and be only to our ruler."
+ assistant_legates_reform_desc: "In order to smoothen the administration in our internal lands, we will assign legates to our provinces, which will oversee the land and be loyal only to our ruler."
 
  the_army_of_sal_reform: "The Army of Sal"
  the_army_of_sal_reform_desc: "Rise, all the faithful of Sal! The hour has struck to end the heathenous reign of all the pagans and heretics, to finally unite the humanity under one banner."
@@ -815,3 +816,33 @@
  SIS_scramble_for_silvestria: "Scramble for Silvestria"
  desc_SIS_scramble_for_silvestria: "Vacuum of power caused many states to try to gather as much power as they can."
  saelian.14.b: "We should seize some land in the chaos."
+
+ MUSKETEER_NAME: "$HOME$'s $NUM$$ORDER$ Dauerschütze Regiment"
+ MODIFIER_ALLOWED_MUSKETEER_FRACTION: "Dauerschütze Force Limit"
+ MODIFIER_LOCAL_HAS_MUSKETEER: "Province Allows Dauerschütze Infantry"
+ MUSKETEER_FORCELIMIT: "We can recruit up to $LIMIT|Y$ §GDauerschützes§! owing to:\n$FLAMOUNT|Y$ from $PERC|%Y$ of our force-limit of $FL$:\n"
+ MUSKETEER_LIMIT_CULTURE: "$PROVINCE$ is a $CULTURE$ province, so can not recruit Dauerschütze Infantry here."
+ ADD_MUSKETEER_SUB_UNIT_EFFECT: "Get '§GDauerschütze§!' $UNIT$ in $WHERE|Y$."
+ MUSKETEER_DESC: "Dauerschützen are regiments assigned by the emperor to various subjects in the empire to reward their loyalty and in later decades to prevent them from joining Liemarian reformation. They were first used during the late years of the Mercenary Wars, however their true strength was shown during the war of Bohemian succession. They are organized in such a way, that while the regiment is lead by a prince, de facto power belongs to the imperial officer.\nThey can only be recruited in imperial provinces and their amount depends on number of princes in the empire."
+ REGCAT_musketeer: "Dauerschütze"
+ MUSKETEER_REGIMENT: "Dauerschütze Regiment\n$EFFECT$"
+ HAVE_LESS_MUSKETEER_THAN: "Have less Dauerschütze than §Y$VALUE$§!.\n"
+ HAVE_AT_LEAST_MUSKETEER_THAN: "Have at least §Y$VALUE$§! Dauerschütze.\n"
+ MODIFIER_AMOUNT_OF_MUSKETEER: "Dauerschütze Force Limit"
+ musketeers_modifier: "Dauerschütze Hired"
+ ONLY_MUSKETEER_MODIFIER: "§YAffects only Dauerschütze Regiments§!"
+ MODIFIER_HAS_MUSKETEER: "Country Allows Dauerschütze Infantry"
+
+ decision_reform_the_dauerschutze_title: "Reform the Dauerschütze"
+ decision_reform_the_dauerschutze_desc: "We have to standarize the Dauerschütze even further to make it a truly elite regiment."
+ united_dauerschutze: "Imperial Dauerschütze"
+ desc_united_dauerschutze: "Imperial officers in Dauerschütze now have a much greater control over the regiment than the prince."
+ united_dauerschutze_country: "Dauerschütze Reforms"
+ desc_united_dauerschutze_country: "We have strengthened our status as the leaders of the unified Saelian army."
+
+ decision_reform_the_dauerschutze_evil_title: "Increase Princely Influence"
+ decision_reform_the_dauerschutze_evil_desc: "We will grant our princes more autonomy in commanding their Dauerschütze regiments."
+ disunited_dauerschutze: "Princely Dauerschütze"
+ desc_disunited_dauerschutze: "Princes now have a greater control over their Dauerschütze units."
+ disunited_dauerschutze_country: "Dauerschütze Concessions"
+ desc_disunited_dauerschutze_country: "Our subjects now trust us a lot more."
