--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -19,7 +19,7 @@
  emperor_reinforce_imperial_borders: "Reinforced Borders of the Empire"
  emperor_reinforce_imperial_borders_emperor: "Reinforced Borders of the Empire"
  emperor_reinforce_imperial_borders_emperor_per_prince: "Reinforced Borders of the Empire"
- emperor_reinforce_imperial_borders_desc: "The first step to securing stability of the Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\n---"
+ emperor_reinforce_imperial_borders_desc: "The first step to securing stability of the Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\n---\nUnlocks \"§YReform the Dauerschütze§!\" decision\nUnlocks \"§YPrinces in the Army§!\" decision\n---"
  demand_additional_levies_title: "Demand Additional Levies"
  demand_additional_levies_desc: "The Empire is in dire need of manpower to protect the its subject. Our loyal princes will be demanded to offer us additional troops."
  saelian.2.t: "Emperor demands an additional levy"
@@ -33,7 +33,7 @@
 
  emperor_unify_imperial_infrastructure_title: "Unify the Infrastructure"
  emperor_unify_imperial_infrastructure: "Unified Infrastructure"
- emperor_unify_imperial_infrastructure_desc: "Bringing the Empire closer economically will surely help its political situation.\n---\nUnlocks \"§PExpand Via Caroli§!\" decision\nUnlocks \"§PExpand Via Magreini§!\" decision\n---"
+ emperor_unify_imperial_infrastructure_desc: "Bringing the Empire closer economically will surely help its political situation.\n---\nUnlocks \"§YExpand Via Caroli§!\" decision\nUnlocks \"§YExpand Via Magreini§!\" decision\n---"
  emperor_unify_imperial_infrastructure_province: "Unified Infrastructure" 
  expand_via_caroli_title: "Expand Via Caroli"
  expand_via_caroli_desc: "Built by Emperor Carol III, is the second longest road in the Empire. It stretches from city of Merkast in the west, through Orenburg, Rotzwasch, Hegenstadt, Pratzau, Rogau, to city of Dorschau in the east."
@@ -840,7 +840,7 @@
  united_dauerschutze_country: "Dauerschütze Reforms"
  desc_united_dauerschutze_country: "We have strengthened our status as the leaders of the unified Saelian army."
 
- decision_reform_the_dauerschutze_evil_title: "Increase Princely Influence"
+ decision_reform_the_dauerschutze_evil_title: "Princes in the Army"
  decision_reform_the_dauerschutze_evil_desc: "We will grant our princes more autonomy in commanding their Dauerschütze regiments."
  disunited_dauerschutze: "Princely Dauerschütze"
  desc_disunited_dauerschutze: "Princes now have a greater control over their Dauerschütze units."
