--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -19,7 +19,7 @@
  emperor_reinforce_imperial_borders: "Reinforced Borders of the Empire"
  emperor_reinforce_imperial_borders_emperor: "Reinforced Borders of the Empire"
  emperor_reinforce_imperial_borders_emperor_per_prince: "Reinforced Borders of the Empire"
- emperor_reinforce_imperial_borders_desc: "The first step to securing stability of the Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\n---\nUnlocks \"§YReform the Dauerschütze§!\" decision\nUnlocks \"§YPrinces in the Army§!\" decision\n---"
+ emperor_reinforce_imperial_borders_desc: "The first step to securing stability of the Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\nUnlocks \"§YReform the Dauerschütze§!\" decision\nUnlocks \"§YPrinces in the Army§!\" decision\n---"
  demand_additional_levies_title: "Demand Additional Levies"
  demand_additional_levies_desc: "The Empire is in dire need of manpower to protect the its subject. Our loyal princes will be demanded to offer us additional troops."
  saelian.2.t: "Emperor demands an additional levy"
