--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -966,7 +966,7 @@
  PROV965: "Creval"
  PROV966: "Montax"
  PROV967: "Etnuenne"
- PROV968: "968"
+ PROV968: "Southern Farigan Sea"
  PROV969: "Nancous"
  PROV970: "970"
  PROV971: "Lieref"
@@ -1870,7 +1870,7 @@
  PROV1869: "Bahoraykaan"
  PROV1870: "Myawraykaan"
  PROV1871: "1871"
- PROV1872: "1872"
+ PROV1872: "Southern Bien Giura"
  PROV1873: "Wajikogun"
  PROV1874: "Husehe"
  PROV1875: "Niraikali Coast"
@@ -2352,7 +2352,7 @@
  PROV2351: "Elin's Pass"
  PROV2352: "Saatkaak Bay"
  PROV2353: "Kanayuk Bay"
- PROV2354: "2354"
+ PROV2354: "Aasrivakian Coast"
  PROV2355: "2355"
  PROV2356: "Apunian Coast"
  PROV2357: "2357"
@@ -2714,7 +2714,7 @@
  PROV2713: "Tolan"
  PROV2714: "Adrazma"
  PROV2715: "Menta"
- PROV2716: "2716"
+ PROV2716: "Puntien Straits"
  PROV2717: "2717"
  PROV2718: "Sagz"
  PROV2719: "Sarikul"
@@ -3061,7 +3061,7 @@
  PROV3060: "3060"
  PROV3061: "Jhulasa"
  PROV3062: "Jhulasa"
- PROV3063: "3063"
+ PROV3063: "Northern Farigan Sea"
  PROV3064: "Jhulasa"
  PROV3065: "Dargali"
  PROV3066: "Rath"
@@ -3069,21 +3069,21 @@
  PROV3068: "Vasna"
  PROV3069: "Drabazid"
  PROV3070: "Kirsi"
- PROV3071: "3071"
+ PROV3071: "Central Farigan Sea"
  PROV3072: "Sinyjuna"
  PROV3073: "Suhbana"
  PROV3074: "Hinthan"
  PROV3075: "Kasari"
  PROV3076: "Hansal"
- PROV3077: "3077"
+ PROV3077: "Eastern Farigan Sea"
  PROV3078: "Salak"
  PROV3079: "3079"
  PROV3080: "Kurup"
  PROV3081: "Chamamk"
  PROV3082: "Chaparra"
- PROV3083: "3083"
+ PROV3083: "Western Farigan Sea"
  PROV3084: "Ranjskhora"
- PROV3085: "3085"
+ PROV3085: "Likuruman Bay"
  PROV3086: "Sukiran"
  PROV3087: "Sahnkar"
  PROV3088: "Jihgnari"
@@ -3142,7 +3142,7 @@
  PROV3141: "Gözdyr"
  PROV3142: "Yabantok"
  PROV3143: "3143"
- PROV3144: "3144"
+ PROV3144: "Chitan Coast"
  PROV3145: "Gerkan"
  PROV3146: "3146"
  PROV3147: "Tamaz"
@@ -3750,7 +3750,7 @@
  PROV3749: "Vithisi"
  PROV3750: "Caektucg"
  PROV3751: "Jipsanha"
- PROV3752: "3752"
+ PROV3752: "Kaniskatian Sea"
  PROV3753: "Vastapsa"
  PROV3754: "3754"
  PROV3755: "3755"
@@ -3876,7 +3876,7 @@
  PROV3875: "Kawgan"
  PROV3876: "3876"
  PROV3877: "3877"
- PROV3878: "3878"
+ PROV3878: "Southeastern Farigan Sea"
  PROV3879: "3879"
  PROV3880: "3880"
  PROV3881: "3881"
