icons _ new religion

--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -37,6 +37,7 @@
  achiqnay_rebels_name: "Achiqnay Rebels"
  agellidian_rebels_name: "Agellidian Rebels"
  gajifeng_spiritualism_rebels_name: "Jipindip Rebels"
+ savpan_religion_rebels_name: "Savpan Rebels"
  khutigar_shamanism_rebels_name: "Bavganian Rebels"
  wirosepan_rebels_name: "Wirosepan Rebels"
  xianga_rebels_name: "Xianga Rebels"
@@ -46,5 +47,5 @@
  bjateel_animism_rebels_name: "Bjateelian Rebels"
  cach_moi_rebels_name: "Cách Mói Rebels"
  dejilobi_rebels_name: "Dejilobi Rebels"
- tamgarani_rebels: "Tamgarani Rebels"
- jambakan_pantheons_rebels: "Jambakan Pantheons Rebels"
+ tamgarani_rebels_name: "Tamgarani Rebels"
+ jambakan_pantheons_rebels_name: "Jambakan Pantheons Rebels"
