--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -427,6 +427,14 @@
 
  eastern_pagan: "Eastern Pagan"
 
+ savpan_religion: "Khuaamseu"
+ savpan_religion_religion_desc: "During the rise of Hengtuan religions, only the Savpa people resisted conversion and kept their beliefs in the Misivid mythology."
+ savpan_religion_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ savpan_religion_rebels_title: "Religious"
+ savpan_religion_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ savpan_religion_rebels_army: "$RELIGION$ Army"
+ savpan_religion_rebels_demand: "Convert $COUNTRYNAME$"
+
  gajifeng_spiritualism: "Jipindip"
  gajifeng_spiritualism_religion_desc: "Gajifeng Spiritualism is a bulk term for different sects and beliefs practiced by the Tsakung people in Dasenli and neighboring areas. They put a great importance in respecting the dead who are said to roam the countryside."
  gajifeng_spiritualism_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
