--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -453,7 +453,7 @@
  dejilobi_rebels_demand: "Convert $COUNTRYNAME$" 
  henga: "Henga"
  
- bjateel_animism: "Bjateelian"
+ bjateel_animism: "Bjateel"
  bjateel_animism_religion_desc: "Local Animism flavour that believe animals are aspects of gods. Do better Description (WIP)."
  bjateel_animism_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  bjateel_animism_rebels_title: "Religious"
