--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -44,7 +44,7 @@
  xifang_rebels_name: "Xifang Rebels"
  zimahei_cult_rebels_name: "Zimahei Cult Rebels"
  aminian_pantheon_rebels_name: "Aminian Pantheon Rebels"
- bjateel_animism_rebels_name: "Bjateelian Rebels"
+ bjateel_animism_rebels_name: "Bjateel Rebels"
  cach_moi_rebels_name: "Cách Mói Rebels"
  dejilobi_rebels_name: "Dejilobi Rebels"
  tamgarani_rebels_name: "Tamgarani Rebels"
