--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -111,7 +111,7 @@
  indrigerland_frontiers_of_yhalum: "Frontiers of Yhälum"
  indrigerland_frontiers_of_yhalum_desc: "Tummic monopoly on various furs have made many of our lords interested in finding our own permanent supply. Settlements in Jaatansangot and along the river Ruoksjoha. A byproduct of exploring the eastern seas has also allowed us to open new trade routes with many tribes of Kakigia and Khutigaria, further increasing the colonial fervor."
  indrigerland_spirits_of_the_sea: "Spirits of the Sea"
- indrigerland_spirits_of_the_sea_desc: "Just like our brothers south, our people sing chants of beasts, which live in these lands, protecting their subjects. Many of our stories focus on monster lurking in the deep and cold sea. Legends of powerful Tavoalli and Čuodamoud are no scare for our seamen, for they know how to mark their ships against any spirits."
+ indrigerland_spirits_of_the_sea_desc: "Just like our brothers south, our people sing chants of beasts, which live in these lands, protecting their subjects. Many of our stories focus on monster lurking in the deep and cold sea. Legends of powerful Tavoalli and Cuodamoud are no scare for our seamen, for they know how to mark their ships against any spirits."
  indrigerland_joukka_herding: "Joukka Herding"
  indrigerland_joukka_herding_desc: "The most effective way to herd and breed the livestock is to do it in the biggest groups possible. While many of our people don't have a large personal herd, it became a common practice for families to group together and have a shared herd. This is not only manpower efficient, allowing more of our people to focus on trading and fishing, but also strengthens the local bonds of our people."
  indrigerland_settlers_of_minisa: "Settlers of Minisa"
