--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -161,6 +161,16 @@
  hengtua.100.g: "Haanping School"
  hengtua.100.h: "Senkoi School"
 
+ hengtua.101.t: "Foreign Scholar moves into [Root.GetName]"
+ hengtua.101.d: "We have decided to grant a residence to a scholar from a foreign school. However, we have not decided yet which scholar should get the privilege to live within the secure borders of [Root.GetName]."
+ hengtua.101.a: "Grant the privilege to a scholar of the Taamtau School."
+ hengtua.101.b: "Grant the privilege to a scholar of the Danshu School."
+ hengtua.101.c: "Grant the privilege to a scholar of the Taowang School."
+ hengtua.101.e: "Grant the privilege to a scholar of the Hujiming School."
+ hengtua.101.f: "Grant the privilege to a scholar of the Shenting School."
+ hengtua.101.g: "Grant the privilege to a scholar of the Haanping School."
+ hengtua.101.h: "Grant the privilege to a scholar of the Senkoi School."
+
  mapin_laws_reform: "Mapin Laws"
  mapin_laws_reform_desc: "Waging war is not so different from ruling a country - a succesful military can only be maintained through absolute discipline."
  
