--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -809,8 +809,9 @@
  sudian_sea_area: "Sudian Sea"
  outer_pisachaian_ocean_area: "Outer Pisachaian Ocean"
  karan_sea_area: "Karan Sea"
- south_kindulian_sea_area: "South Kindulian Sea"
- north_kindulian_sea_area: "North Kindulian Sea"
+ south_kindulian_sea_area: "Southern Kindulian Sea"
+ north_kindulian_sea_area: "Northern Kindulian Sea"
+ eastern_kindulian_sea_area: "Eastern Kindulian Sea"
  laut_dalam_area: "Laut Dalam"
  buubu_area: "Buubu"
  fiusga_area: "Fiusga"
@@ -962,3 +963,27 @@
  sivisurukpags_area: "Sivisurukpags"
  east_fengelland_area: "East Fengelland"
  west_fengelland_area: "West Fengelland"
+
+ incense_coast_area: "Incense Coast"
+ mmepoasa_area: "Mmepoasa"
+ kwaena_area: "Kwaena"
+ mbania_area: "Mbania"
+ padara_area: "Padara"
+ lower_odaran_area: "Lower Odaran"
+ kapatene_area: "Kapatene Area"
+ gittan_area: "Gittan"
+ nyanba_area: "Nyanba"
+ kapatuka_area: "Kapatuka"
+ sagbayes_area: "Sagbayes"
+ okeirina_area: "Okeirina"
+ kapazoa_area: "Kapazoa"
+ geran_area: "Geran"
+ oudama_area: "Oudama"
+ kapata_area: "Kapata"
+ komanar_area: "Komanar"
+ rakapa_area: "Rakapa"
+ paoka_area: "Paoka"
+ middle_odaran_area: "Middle Odaran"
+ salam_sea_area: "Salam Sea"
+ darrasian_sea_area: "Darrasian Sea"
+ western_sahilan_coast_area: "West Sahilan Coast"
